--- a/try.html
+++ b/try.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>
 		beautiful and simple website using html only -- fullywrold web tutorials
+	<link rel="stylesheet" href="pelfe.css">
 	</title>
 </head>
 <body background="1.jpg" link="#000" alink="#017bf5" vlink="#000">
